v6.3.0/_sources/plugins/sensor_test_template_edit_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-entry
.. role:: ansible-option-default
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.dnac.sensor_test_template_edit_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.sensor_test_template_edit module -- Resource module for Sensor Test Template Edit
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 6.3.0).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.sensor_test_template_edit`.

.. version_added

.. versionadded:: 3.1.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operation update of the resource Sensor Test Template Edit.
- Intent API to deploy, schedule, or edit and existing SENSOR test template.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk >= 2.4.8
- python >= 3.5


.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **dnac_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco DNA Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-default-bold:`no` :ansible-option-default:`← (default)`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **dnac_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **dnac_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **dnac_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-dnac_username:
      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-user:

      .. rst-class:: ansible-option-title

      **dnac_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **dnac_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **dnac_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco DNA Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.2.3.3"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-locationInfoList"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-locationInfoList:

      .. rst-class:: ansible-option-title

      **locationInfoList**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-locationInfoList" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sensor Test Template Edit's locationInfoList.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-locationInfoList/allSensors"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-locationInfoList/allSensors:

      .. rst-class:: ansible-option-title

      **allSensors**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-locationInfoList/allSensors" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      All Sensors.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-locationInfoList/locationId"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-locationInfoList/locationId:

      .. rst-class:: ansible-option-title

      **locationId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-locationInfoList/locationId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Location Id.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-locationInfoList/locationType"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-locationInfoList/locationType:

      .. rst-class:: ansible-option-title

      **locationType**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-locationInfoList/locationType" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Location Type.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-locationInfoList/siteHierarchy"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-locationInfoList/siteHierarchy:

      .. rst-class:: ansible-option-title

      **siteHierarchy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-locationInfoList/siteHierarchy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Site Hierarchy.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule:

      .. rst-class:: ansible-option-title

      **schedule**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sensor Test Template Edit's schedule.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/frequency"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/frequency:

      .. rst-class:: ansible-option-title

      **frequency**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/frequency" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Sensor Test Template Edit's frequency.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/frequency/unit"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/frequency/unit:

      .. rst-class:: ansible-option-title

      **unit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/frequency/unit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Unit.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/frequency/value"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/frequency/value:

      .. rst-class:: ansible-option-title

      **value**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/frequency/value" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Value.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/scheduleRange"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/scheduleRange:

      .. rst-class:: ansible-option-title

      **scheduleRange**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/scheduleRange" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Sensor Test Template Edit's scheduleRange.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/scheduleRange/day"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/scheduleRange/day:

      .. rst-class:: ansible-option-title

      **day**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/scheduleRange/day" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Day.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/scheduleRange/timeRange"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/scheduleRange/timeRange:

      .. rst-class:: ansible-option-title

      **timeRange**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/scheduleRange/timeRange" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Sensor Test Template Edit's timeRange.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/scheduleRange/timeRange/frequency"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/scheduleRange/timeRange/frequency:

      .. rst-class:: ansible-option-title

      **frequency**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/scheduleRange/timeRange/frequency" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Sensor Test Template Edit's frequency.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/scheduleRange/timeRange/frequency/unit"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/scheduleRange/timeRange/frequency/unit:

      .. rst-class:: ansible-option-title

      **unit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/scheduleRange/timeRange/frequency/unit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Unit.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/scheduleRange/timeRange/frequency/value"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/scheduleRange/timeRange/frequency/value:

      .. rst-class:: ansible-option-title

      **value**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/scheduleRange/timeRange/frequency/value" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Value.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/scheduleRange/timeRange/from"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/scheduleRange/timeRange/from:

      .. rst-class:: ansible-option-title

      **from**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/scheduleRange/timeRange/from" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      From.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/scheduleRange/timeRange/to"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/scheduleRange/timeRange/to:

      .. rst-class:: ansible-option-title

      **to**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/scheduleRange/timeRange/to" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      To.


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-schedule/testScheduleMode"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-schedule/testScheduleMode:

      .. rst-class:: ansible-option-title

      **testScheduleMode**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-schedule/testScheduleMode" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Test Schedule Mode.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-templateName"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-templateName:

      .. rst-class:: ansible-option-title

      **templateName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-templateName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Template Name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco DNA Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are sensors.Sensors.edit_sensor_test_template,
   - Paths used are put /dna/intent/api/v1/AssuranceScheduleSensorTest,
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco DNAC SDK
   - The parameters starting with dnac_ are used by the Cisco DNAC Python SDK to establish the connection

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Update all
      cisco.dnac.sensor_test_template_edit:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        locationInfoList:
        - allSensors: true
          locationId: string
          locationType: string
          siteHierarchy: string
        schedule:
          frequency:
            unit: string
            value: 0
          scheduleRange:
          - day: string
            timeRange:
            - frequency:
                unit: string
                value: 0
              from: string
              to: string
          testScheduleMode: string
        templateName: string





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-dnac_response"></div>

      .. _ansible_collections.cisco.dnac.sensor_test_template_edit_module__return-dnac_response:

      .. rst-class:: ansible-option-title

      **dnac_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco DNAC Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "{\\n  \\"version\\": \\"string\\",\\n  \\"response\\": {\\n    \\"\_id\\": \\"string\\",\\n    \\"name\\": \\"string\\",\\n    \\"version\\": 0,\\n    \\"modelVersion\\": 0,\\n    \\"startTime\\": 0,\\n    \\"lastModifiedTime\\": 0,\\n    \\"numAssociatedSensor\\": 0,\\n    \\"location\\": {},\\n    \\"siteHierarchy\\": {},\\n    \\"status\\": \\"string\\",\\n    \\"connection\\": \\"string\\",\\n    \\"frequency\\": {},\\n    \\"rssiThreshold\\": 0,\\n    \\"numNeighborAPThreshold\\": 0,\\n    \\"scheduleInDays\\": 0,\\n    \\"wlans\\": [\\n      {}\\n    ],\\n    \\"ssids\\": [\\n      {\\n        \\"bands\\": {},\\n        \\"ssid\\": \\"string\\",\\n        \\"profileName\\": \\"string\\",\\n        \\"authType\\": \\"string\\",\\n        \\"authTypeRcvd\\": {},\\n        \\"psk\\": \\"string\\",\\n        \\"username\\": {},\\n        \\"password\\": {},\\n        \\"eapMethod\\": {},\\n        \\"scep\\": true,\\n        \\"authProtocol\\": {},\\n        \\"certfilename\\": {},\\n        \\"certxferprotocol\\": \\"string\\",\\n        \\"certstatus\\": \\"string\\",\\n        \\"certpassphrase\\": {},\\n        \\"certdownloadurl\\": {},\\n        \\"numAps\\": 0,\\n        \\"numSensors\\": 0,\\n        \\"layer3webAuthsecurity\\": {},\\n        \\"layer3webAuthuserName\\": {},\\n        \\"layer3webAuthpassword\\": {},\\n        \\"extWebAuthVirtualIp\\": {},\\n        \\"layer3webAuthEmailAddress\\": {},\\n        \\"qosPolicy\\": \\"string\\",\\n        \\"extWebAuth\\": true,\\n        \\"whiteList\\": true,\\n        \\"extWebAuthPortal\\": {},\\n        \\"extWebAuthAccessUrl\\": {},\\n        \\"extWebAuthHtmlTag\\": [\\n          {}\\n        ],\\n        \\"thirdParty\\": {\\n          \\"selected\\": true\\n        },\\n        \\"id\\": 0,\\n        \\"wlanId\\": 0,\\n        \\"wlc\\": {},\\n        \\"validFrom\\": 0,\\n        \\"validTo\\": 0,\\n        \\"status\\": \\"string\\",\\n        \\"tests\\": [\\n          {\\n            \\"name\\": \\"string\\",\\n            \\"config\\": [\\n              {}\\n            ]\\n          }\\n        ]\\n      }\\n    ],\\n    \\"testScheduleMode\\": \\"string\\",\\n    \\"showWlcUpgradeBanner\\": true,\\n    \\"radioAsSensorRemoved\\": true,\\n    \\"encryptionMode\\": \\"string\\",\\n    \\"runNow\\": \\"string\\",\\n    \\"locationInfoList\\": [\\n      {\\n        \\"locationId\\": \\"string\\",\\n        \\"locationType\\": \\"string\\",\\n        \\"allSensors\\": true,\\n        \\"siteHierarchy\\": \\"string\\",\\n        \\"macAddressList\\": [\\n          {}\\n        ]\\n      }\\n    ],\\n    \\"schedule\\": {\\n      \\"testScheduleMode\\": \\"string\\",\\n      \\"scheduleRange\\": [\\n        {\\n          \\"timeRange\\": [\\n            {\\n              \\"from\\": \\"string\\",\\n              \\"to\\": \\"string\\",\\n              \\"frequency\\": {\\n                \\"value\\": 0,\\n                \\"unit\\": \\"string\\"\\n              }\\n            }\\n          ],\\n          \\"day\\": \\"string\\"\\n        }\\n      ],\\n      \\"startTime\\": 0,\\n      \\"frequency\\": {\\n        \\"value\\": 0,\\n        \\"unit\\": \\"string\\"\\n      }\\n    },\\n    \\"tests\\": {},\\n    \\"sensors\\": [\\n      {}\\n    ],\\n    \\"apCoverage\\": [\\n      {\\n        \\"bands\\": \\"string\\",\\n        \\"numberOfApsToTest\\": 0,\\n        \\"rssiThreshold\\": 0\\n      }\\n    ],\\n    \\"testDurationEstimate\\": 0,\\n    \\"testTemplate\\": true,\\n    \\"legacyTestSuite\\": true,\\n    \\"tenantId\\": \\"string\\"\\n  }\\n}\\n"


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/dnacenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/dnacenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

